--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_storage: ^11.6.0
   image_picker: ^1.0.7
-
+  sidebar_bigeagle: ^0.2.2+1
 
 dev_dependencies:
   hive_generator: ^2.0.1
