--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
   firebase_storage: ^11.6.0
   image_picker: ^1.0.7
   sidebar_bigeagle: ^0.2.2+1
+  location: ^5.0.3
+  geolocator: ^9.0.0
+  google_maps_flutter: ^2.2.0
+  permission_handler: ^11.0.1
+
 
 dev_dependencies:
   hive_generator: ^2.0.1
