--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   geolocator: ^9.0.0
   google_maps_flutter: ^2.2.0
   permission_handler: ^11.0.1
-
+  intl: ^0.18.0
 
 dev_dependencies:
   hive_generator: ^2.0.1
