--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   google_maps_flutter: ^2.2.0
   permission_handler: ^11.0.1
   intl: ^0.18.0
-
+  connectivity_plus: ^3.0.3
 dev_dependencies:
   hive_generator: ^2.0.1
   injectable_generator: ^2.4.1
