--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,14 @@ dependencies:
   permission_handler: ^11.0.1
   intl: ^0.18.0
   connectivity_plus: ^3.0.3
+  open_file: ^3.3.2
+  app_settings: ^5.1.1
+  package_info_plus: ^4.2.0
+  flutter_phoenix: ^1.1.1
+  file_picker: ^7.0.2
+  flutter_secure_storage: ^9.2.2
+  hexcolor: ^3.0.1
+  flutter_platform_widgets: ^3.3.5
 dev_dependencies:
   hive_generator: ^2.0.1
   injectable_generator: ^2.4.1
