--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.3.1
   readmore: ^2.2.0
-  phonepe_payment_sdk: ^2.0.1
+ # phonepe_payment_sdk: ^2.0.1
   crypto: ^3.0.3
   # firebase_core: ^2.24.2
   #  firebase_messaging: ^14.7.10
