--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   pdf: ^3.8.4
   injectable: ^2.3.2
   get_it: ^7.6.7
+  shared_preferences: ^2.0.13
   google_fonts: ^6.1.0
   flutter_staggered_grid_view: ^0.7.0
   go_router: ^13.1.0
